[add] 認証完了のページ遷移(page1)を実装

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,9 +4,9 @@
   <p>ログイン済：{{ sessionID }}</p>
 </div>
 
-<!--
-<a routerLink="/page1">認証が必要なページ(想定)</a>
--->
+  <button type="button" (click)="navigateNext()">
+    <span>認証が必要なページ(想定)</span>
+  </button>
 
 <div *ngIf="!sessionID">
   <button type="button" (click)="login()">
