--- a/src/app/callback-auth/callback-auth.component.html
+++ b/src/app/callback-auth/callback-auth.component.html
@@ -1,7 +1,5 @@
 <p>Callback page work!</p>
 
-<!--
-<button type="button" (click)="close()">
+<button type="button" (click)="exeProcess()">
   <span>SAML認証完了 ※本来は自動クローズ</span>
 </button>
--->
