--- a/src/app/page1/page1.component.html
+++ b/src/app/page1/page1.component.html
@@ -2,4 +2,6 @@
 
 <p>ログイン済：{{ sessionID }}</p>
 
-<a routerLink="">ログアウト</a>
+<button type="button" (click)="logout()">
+  <span>ログアウト</span>
+</button>
